Add api to get information about one resource
