# gen/http/resource/server/server.go
@@ -22,6 +22,7 @@ import (
 type Server struct {
 	Mounts []*MountPoint
 	All    http.Handler
+	Info   http.Handler
 	CORS   http.Handler
 }
 
@@ -59,9 +60,12 @@ func New(
 	return &Server{
 		Mounts: []*MountPoint{
 			{"All", "GET", "/resources"},
+			{"Info", "GET", "/resource/{resourceId}"},
 			{"CORS", "OPTIONS", "/resources"},
+			{"CORS", "OPTIONS", "/resource/{resourceId}"},
 		},
 		All:  NewAllHandler(e.All, mux, decoder, encoder, errhandler, formatter),
+		Info: NewInfoHandler(e.Info, mux, decoder, encoder, errhandler, formatter),
 		CORS: NewCORSHandler(),
 	}
 }
@@ -72,12 +76,14 @@ func (s *Server) Service() string { return "resource" }
 // Use wraps the server handlers with the given middleware.
 func (s *Server) Use(m func(http.Handler) http.Handler) {
 	s.All = m(s.All)
+	s.Info = m(s.Info)
 	s.CORS = m(s.CORS)
 }
 
 // Mount configures the mux to serve the resource endpoints.
 func Mount(mux goahttp.Muxer, h *Server) {
 	MountAllHandler(mux, h.All)
+	MountInfoHandler(mux, h.Info)
 	MountCORSHandler(mux, h.CORS)
 }
 
@@ -125,6 +131,57 @@ func NewAllHandler(
 	})
 }
 
+// MountInfoHandler configures the mux to serve the "resource" service "Info"
+// endpoint.
+func MountInfoHandler(mux goahttp.Muxer, h http.Handler) {
+	f, ok := handleResourceOrigin(h).(http.HandlerFunc)
+	if !ok {
+		f = func(w http.ResponseWriter, r *http.Request) {
+			h.ServeHTTP(w, r)
+		}
+	}
+	mux.Handle("GET", "/resource/{resourceId}", f)
+}
+
+// NewInfoHandler creates a HTTP handler which loads the HTTP request and calls
+// the "resource" service "Info" endpoint.
+func NewInfoHandler(
+	endpoint goa.Endpoint,
+	mux goahttp.Muxer,
+	decoder func(*http.Request) goahttp.Decoder,
+	encoder func(context.Context, http.ResponseWriter) goahttp.Encoder,
+	errhandler func(context.Context, http.ResponseWriter, error),
+	formatter func(err error) goahttp.Statuser,
+) http.Handler {
+	var (
+		decodeRequest  = DecodeInfoRequest(mux, decoder)
+		encodeResponse = EncodeInfoResponse(encoder)
+		encodeError    = EncodeInfoError(encoder, formatter)
+	)
+	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		ctx := context.WithValue(r.Context(), goahttp.AcceptTypeKey, r.Header.Get("Accept"))
+		ctx = context.WithValue(ctx, goa.MethodKey, "Info")
+		ctx = context.WithValue(ctx, goa.ServiceKey, "resource")
+		payload, err := decodeRequest(r)
+		if err != nil {
+			if err := encodeError(ctx, w, err); err != nil {
+				errhandler(ctx, w, err)
+			}
+			return
+		}
+		res, err := endpoint(ctx, payload)
+		if err != nil {
+			if err := encodeError(ctx, w, err); err != nil {
+				errhandler(ctx, w, err)
+			}
+			return
+		}
+		if err := encodeResponse(ctx, w, res); err != nil {
+			errhandler(ctx, w, err)
+		}
+	})
+}
+
 // MountCORSHandler configures the mux to serve the CORS endpoints for the
 // service resource.
 func MountCORSHandler(mux goahttp.Muxer, h http.Handler) {
@@ -136,6 +193,7 @@ func MountCORSHandler(mux goahttp.Muxer, h http.Handler) {
 		}
 	}
 	mux.Handle("OPTIONS", "/resources", f)
+	mux.Handle("OPTIONS", "/resource/{resourceId}", f)
 }
 
 // NewCORSHandler creates a HTTP handler which returns a simple 200 response.
